--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string-array name="goal">
         <item>Date Place</item>
         <item>Un lieu pour entre potes</item>
-        <item>un lieu pour sortir avec mes parents</item>
+        <item>Un lieu pour sortir avec mes parents</item>
     </string-array>
     <string name="twitterUsername">\@joeyni</string>
 
