--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,12 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="setting">Paramètres</string>
+    <string name="rotation_screen">Bloquer rotation</string>
+    <string name="notif">Gérer les notifications</string>
+    <string name="help">Aide</string>
+    <string name="language">Langue</string>
+    <string name="update">Version à jour</string>
+    <string name="social_media">Réseaux sociaux</string>
+    <string name="contact">Contact</string>
+    <string name="delete_user">Supprimer compte</string>
 </resources>
