--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="social_media">Réseaux sociaux</string>
     <string name="contact">Contact</string>
     <string name="delete_user">Supprimer compte</string>
+    <string name="authorization">Autorisation</string>
+    <string name="legal_notice">Mention légale</string>
 </resources>
