--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,55 +1,49 @@
 <resources>
     <string name="app_name">DatePlace</string>
-    <string name="button_connexion_text">Se Connecter</string>
-    <string name="button_inscription_text">S\'inscrire</string>
+    <string name="button_connexion_text">Connect</string>
+    <string name="button_inscription_text">Subscribe</string>
     <string name="connexion_identifier_HintText">Email</string>
-    <string name="connexion_password_HintText">Mot de passe</string>
-    <string name="button_goback_text">Retour</string>
+    <string name="connexion_password_HintText">Password</string>
+    <string name="button_goback_text">Back</string>
     <string name="button_connect_text">GOOO</string>
-    <string name="button_inscrip_text">Je m\'inscris</string>
-    <string name="title_pseudo_text">Prénom</string>
-    <string name="title_nom_text">Nom</string>
-    <string name="title_adressemail_text">Adresse email</string>
-    <string name="title_password_text">Mot de Passe</string>
-    <string name="title_date_of_birth_text">Date de Naissance</string>
-    <string name="title_goal_text">Ce que je recherche</string>
-    <string name="calendar">Calendrier</string>
+    <string name="button_inscrip_text">Subscribe</string>
+    <string name="title_pseudo_text">FirstName</string>
+    <string name="title_nom_text">LastName</string>
+    <string name="title_adressemail_text">Email</string>
+    <string name="title_password_text">Password</string>
+    <string name="title_date_of_birth_text">Birthday</string>
+    <string name="title_goal_text">What i mean</string>
+    <string name="calendar">Calendar</string>
     <string-array name="goal">
         <item>Date Place</item>
-        <item>Un lieu pour entre potes</item>
-        <item>Un lieu pour sortir avec mes parents</item>
+        <item>Entertainement with friends</item>
+        <item>Entertainement with family</item>
     </string-array>
-    <string name="twitterUsername">\@joeyni</string>
-
-    <string name="user_birthday"></string>
-    <string name="user_name">Nom</string>
-    <string name="user_firstname">Prenom</string>
+    <string name="twitterUsername"></string>
     <string name="user_place">Paris, France</string>
-    <string name="email">Email</string>
     <string name="user_email">************@******</string>
-    <string name="password">Mot de passe</string>
     <string name="user_password">***********</string>
-    <string name="log_out">Déconnexion</string>
-    <string name="search">Rechercher</string>
-    <string name="user_birthday_title">Date de naissance</string>
-    <string name="user_goal_title">But</string>
-    <string name="user_goal"></string>
-
-
+    <string name="log_out">Disconnect</string>
+    <string name="search">Search</string>
+    <string name="user_goal_title">Goal</string>
     <string name="access_token">pk.eyJ1IjoiZGVzbGF5IiwiYSI6ImNqcTQxdXM4dTFrYW00OG11ZHJieHR1YjQifQ.x0wMIY5il7ubistZeYVcEw</string>
-
     <string name="title_activity_map">MapActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="setting">Paramètres</string>
-    <string name="rotation_screen">Bloquer rotation</string>
-    <string name="notif">Gérer les notifications</string>
-    <string name="help">Aide</string>
-    <string name="language">Langue</string>
-    <string name="update">Version à jour</string>
-    <string name="social_media">Réseaux sociaux</string>
+    <string name="setting">Parameters</string>
+    <string name="rotation_screen">Block rotation</string>
+    <string name="notif">Notifications</string>
+    <string name="help">Help</string>
+    <string name="language">Language</string>
+    <string name="update">Current Version</string>
+    <string name="social_media">Social networks</string>
     <string name="contact">Contact</string>
-    <string name="delete_user">Supprimer compte</string>
-    <string name="authorization">Autorisation</string>
-    <string name="legal_notice">Mention légale</string>
+    <string name="delete_user">Delete account</string>
+    <string name="authorization">Authorization</string>
+    <string name="legal_notice">Legal Mention</string>
+
+    <string name="user_name"></string>
+    <string name="user_firstname"></string>
+    <string name="user_birthday"></string>
+    <string name="user_goal"></string>
 </resources>
