--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -5,7 +5,7 @@
     <string name="connexion_identifier_HintText">Email</string>
     <string name="connexion_password_HintText">Mot de passe</string>
     <string name="button_goback_text">Retour</string>
-    <string name="button_connect_text">GOOO</string>
+    <string name="button_connect_text">Connexion</string>
     <string name="button_inscrip_text">Je m\'inscris</string>
     <string name="title_pseudo_text">Prénom</string>
     <string name="title_nom_text">Nom</string>
@@ -55,5 +55,6 @@
     <string name="new_lastname_title_message">Modification du nom</string>
     <string name="cancel_message">Annuler</string>
     <string name="modify_message">Modifier</string>
+    <string name="button_sign_up">Inscription</string>
 
 </resources>
